메인화면 연습문제 준비  - 내 정보 조회 API(GET) 활용   - token값 필용

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,10 +5,16 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:orientation="vertical"
         android:padding="20dp"
+        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
+        <TextView
+            android:id="@+id/txtViewNickname"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=".. 민"/>
 
     </LinearLayout>
 </layout>
