--- a/app/src/main/res/layout/activity_manage_my_friends.xml
+++ b/app/src/main/res/layout/activity_manage_my_friends.xml
@@ -17,6 +17,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
+            android:layout_gravity="end|bottom"
+            android:layout_marginBottom="10dp"
+            android:layout_marginEnd="10dp"
             android:text="친구 추가하기"/>
 
     </FrameLayout>
