--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,15 +11,17 @@
         tools:context=".MainActivity">
 
 
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/mainTabLayout"
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/mainViewPager2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="0dp"
+            android:layout_weight="1"/>
 
-        <androidx.viewpager.widget.ViewPager
-            android:id="@+id/mainViewPager"
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/btnBottomNav"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="wrap_content"
+            app:menu="@menu/menu_for_main_botton_nav"/>
 
     </LinearLayout>
 </layout>
