--- a/app/src/main/res/layout/activity_manage_my_friends.xml
+++ b/app/src/main/res/layout/activity_manage_my_friends.xml
@@ -7,11 +7,6 @@
         android:layout_height="match_parent"
         tools:context=".ManageMyFriendsActivity">
 
-        <ListView
-            android:id="@+id/myFriendsListView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-
         <Button
             android:id="@+id/btnAddFriend"
             android:layout_width="wrap_content"
@@ -21,6 +16,17 @@
             android:layout_marginBottom="10dp"
             android:layout_marginEnd="10dp"
             android:text="친구 추가하기"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <com.google.android.material.tabs.TabLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
 
     </FrameLayout>
 </layout>
