--- a/app/src/main/res/layout/fragment_appointment_list.xml
+++ b/app/src/main/res/layout/fragment_appointment_list.xml
@@ -1,16 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
-        android:gravity="center"
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/txtTest"
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/appointmentRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+        <Button
+            android:id="@+id/btnAddAppointment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="약속목록"/>
-
-    </LinearLayout>
+            android:layout_marginBottom="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_gravity="bottom|right"
+            android:text="약속등록"/>
+    </FrameLayout>
 </layout>
