--- a/app/src/main/res/layout/activity_manage_my_friends.xml
+++ b/app/src/main/res/layout/activity_manage_my_friends.xml
@@ -7,6 +7,23 @@
         android:layout_height="match_parent"
         tools:context=".ManageMyFriendsActivity">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/friendsTabLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <androidx.viewpager.widget.ViewPager
+                android:id="@+id/friendViewPager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+        </LinearLayout>
+
         <Button
             android:id="@+id/btnAddFriend"
             android:layout_width="wrap_content"
@@ -17,16 +34,6 @@
             android:layout_marginEnd="10dp"
             android:text="친구 추가하기"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <com.google.android.material.tabs.TabLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-        </LinearLayout>
 
     </FrameLayout>
 </layout>
