--- a/app/src/main/res/layout/apointment_list_item.xml
+++ b/app/src/main/res/layout/apointment_list_item.xml
@@ -1,21 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:padding="10dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="vertical">
 
         <TextView
+            android:id="@+id/txtTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:textSize="17sp"
             android:text="약속 제목"/>
         <TextView
-            android:layout_marginTop="30dp"
+            android:id="@+id/txtDateTime"
+            android:layout_marginTop="3dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="일시 (22년 3월 5일 오후 6:00"/>
@@ -28,11 +32,15 @@
         android:layout_weight="1"/>
 
     <TextView
+        android:id="@+id/txtPlaceName"
+        android:textSize="15sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="장소 이름"/>
 
     <ImageView
+        android:id="@+id/imgViewMap"
+        android:layout_marginStart="5dp"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:src="@drawable/map_icon"/>
