--- a/app/src/main/res/layout/my_custom_action_bar.xml
+++ b/app/src/main/res/layout/my_custom_action_bar.xml
@@ -2,18 +2,22 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="60dp"
-    android:background="@color/black">
+    android:background="@color/white">
 
     <TextView
         android:id="@+id/txtTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="약속지킴"/>
+        android:text="약속 지킴이"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:layout_gravity="center"/>
 
     <ImageView
+        android:id="@+id/btnAdd"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:src="@mipmap/ic_launcher_round"
+        android:src="@drawable/plus_icon"
         android:padding="5dp"
         android:layout_gravity="end|center_vertical"
         android:layout_marginEnd="10dp"/>
